# sunset-solar

./: .gitignore  DA 2019.csv  LICENSE  README.md  bristol_sun_angles.csv  midas-open_uk-radiation-obs_dv-202007_avon_00676_filton_qcv-1_2017.csv  pyproject.toml  sunset_solar.ipynb
